--- a/components/menu-site/style-menu.css
+++ b/components/menu-site/style-menu.css
@@ -1,9 +1,10 @@
-
-
 .nav-link {
   display: flex;
   flex-direction: row;
   align-items: center;
+  position: sticky;
+  top: 0px;
+  z-index: 10;
 }
 
 .toolbar {
@@ -22,6 +23,8 @@
 }
 .logo {
   color: var(--color);
+  cursor: pointer;
+  margin-left: 13vw ;
 }
 
 .items {
@@ -34,4 +37,25 @@
   font-size: 13px;
   padding: 5px 10px 5px 10px;
   border-radius: 2px;
+}
+/* style shopping cart icon */
+.material-symbols-outlined {
+  color: var(--background-color);
+  background-color: var(--background-box);
+  padding: 6px;
+  cursor: pointer;
+  border-radius: 20px;
+  position: relative;
+}
+#counter {
+  display: none;
+  z-index: 1;
+  position: absolute;
+  left: 3.5vw;
+  top: 2.5vw;
+  width: 20px;
+  height: 20px;
+  background-color: var(--green-box);
+  color: var(--background-color);
+  border-radius: 10px;
 }
