--- a/components/product-site/style-product.css
+++ b/components/product-site/style-product.css
@@ -7,15 +7,19 @@ img[alt="ham"] {
   color: var(--color);
   display: block;
   position: absolute;
-  bottom: 3%;
-  left: 35%;
-  transform: translate(-50%, -50%);
+  /* bottom: 3%; */
+  bottom: 2vw;
+  /* left: 35%; */
+  left: 11vw;
+  /* transform: translate(-50%, -50%); */
+  transform: translate(-10vw, -3vw);
   background-color: var(--background-color);
   width: 20vw;
-  border-radius: 20px;
+  border-radius: 1vw;
   padding: 1vw 0vw 1vw 2vw;
   font-family: var(--font-family);
   z-index: 100;
+  font-size: 1.2vw;
 }
 
 .box1 > a {
