--- a/style/style.css
+++ b/style/style.css
@@ -8,7 +8,7 @@
   border: none;
 }
 html {
-  height: 100%;
+  /* height: 100%; */
   user-select: none;
   -webkit-user-select: none;
 }
@@ -24,7 +24,7 @@ html {
 
 body {
   background-color: var(--background-color);
-  height: 100%;
+  /* height: 100%; */
 }
 /*boc about style*/
 .title {
@@ -81,7 +81,7 @@ body {
   margin-right: auto;
   background-color: var(--green-box);
   height: 13vw;
-  border-radius: 20px;
+  border-radius: 2vw;
   margin-bottom: 2vw;
 }
 
@@ -110,6 +110,8 @@ div > #text_about {
 /*style product components parent*/
 
 #parent_box {
+  margin-top: 10vw;
+  margin-bottom: 5vw;
   padding: 0vw 2vw 0vw 0vw;
   display: flex;
   flex-direction: row;
@@ -121,12 +123,13 @@ div > #text_about {
   text-align: center;
   color: var(--green-box);
   font-size: 5vw;
+  margin-bottom: 2vw;
 }
 #img-friends {
   display: block;
   margin: auto;
   width: 70%;
-  margin-bottom: 2vw;
+  margin-bottom: 10vw;
 }
 
 @media (max-width: 1240px) {
